[package]
name = "bevy_breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Specify a specific version
# bevy = "0.10.0"
# This will use the newest possible version from the Bevy repository
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3